--- a/_i18n/en/_posts/2022-01-04-大數據時代-該如何面對隱私權的挑戰.md
+++ b/_i18n/en/_posts/2022-01-04-大數據時代-該如何面對隱私權的挑戰.md
@@ -16,15 +16,21 @@ Big data brings a better user experience, but it also brings real risks. Accordi
 
 The United Nations General Assembly passed the "Privacy Resolution in the Digital Age" in 2013, emphasizing that all rights that people enjoy outside the Internet, including the right to privacy, should be protected on the Internet. Taiwan also implemented the "Personal Data Protection Act" in 2012 to safeguard the privacy of its citizens. Technically, it uses "Privacy Enhancing Technologies" (PETs) to help minimize the use of personal data and improve data. Security. 
 
+<center>
 ![Audrey Tang sharing 1922 SMS at the Summit for Democracy](https://image.cache.storm.mg/styles/smg-800xauto-er/s3/media/image/2022/01/03/ 20220103-120522_u24167_m737119_b49d.png?itok=m-arcsby "Audrey Tang sharing 1922 SMS at the Summit for Democracy")
+</center>
 
 At the democratic summit that just ended, I shared the results of "the newsletter system" with my international partners . Before the "messaging system", some stores adopted handwritten methods or used online forms. However, in addition to possible privacy issues, the multi-headed carriage approach would also increase the difficulty of the epidemic. Therefore, with the assistance of the g0v community, the government launched the "SMS real-link system". Users do not need the Internet, and even non-smart phones can use it. The data concatenation of the SMS is used to assist the epidemic response. 
 
+<center>
 ![Principle of 1922 SMS](https://image.cache.storm.mg/styles/smg-800xauto-er/s3/media/image/2022/01/03/20220103-120522_u24167_m737120_93ed.png ?itok=xxsfzrkt "Principle of 1922 SMS")
+</center>
 
 Everything has two sides. The linkage system records footprints and makes epidemic investigation more convenient. On the other hand, people will worry about whether the information will be affected by the government. Or abuse by telecommunications companies. In order to solve the public’s doubts, the SMS real-time linkage system converts store information into codes, and telecom operators cannot obtain the correspondence between stores and codes. The newsletter data is stored in different carriers and will be deleted after 28 days. When the epidemic command center needs the nuclear footprint of the epidemic investigation, it will integrate the SMS data scattered in various telecom companies, so that the store code data can completely interpret the location information and ensure that these data will only be used for epidemic prevention. 
 
+<center>
 ![Audrey Tang shares PETs related information](https://image.cache.storm.mg/styles/smg-800xauto-er/s3/media/image/2022/01/03/20220103-120522_u24167_m737118_e1ae. png?itok=fqxsv_wc "Audrey Tang shares PETs related information")
+</center>
 
 Common privacy-enhancing technologies include homomorphic encryption, differential privacy, and federated learning. Take Homomorphic encryption as an example. This encryption method allows the server to perform operations on the ciphertext, and the result can be obtained after decryption. 
 
