--- a/_i18n/en/_posts/2022-01-06-迎向虛實新常態.md
+++ b/_i18n/en/_posts/2022-01-06-迎向虛實新常態.md
@@ -1,13 +1,13 @@
 ---
   layout: "post"
-  title: "How to integrate the benefits of online work in the physical workflow?"
-  excerpt: "PETs technology is paired with a complete legal system to jointly uphold human rights in the digital age."
+  title: "Toward the new normal of hybrid workspace"
+  excerpt: "How to integrate the benefits of online work in the physical workflow?"
   image: "/assets/imgs/vr-6891052_1280.jpg"
-  author: "唐鳳、張皓婷"
+  author: "Audrey Tang, Hao-Ting Chang"
   category: "blog"
   tags: 
-    - "青年參與"
-    - "社會創新"
+    - "Youth Engagement"
+    - "Social Innovation"
 ---
 
 
