--- a/_i18n/zh-TW/_posts/2022-01-06-迎向虛實新常態.md
+++ b/_i18n/zh-TW/_posts/2022-01-06-迎向虛實新常態.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title: 如何在實體的工作流程裡，整合線上工作的好處？
-excerpt: PETs 技術搭配完備的法制，共同持守數位時代的人權。
+title: 迎向虛實新常態
+excerpt: 如何在實體的工作流程裡，整合線上工作的好處？
 image: /assets/imgs/vr-6891052_1280.jpg
 author: 唐鳳、張皓婷
 category: blog
