--- a/_i18n/en/_posts/2022-01-25-民主峰會行動-性別統計開放資料.md
+++ b/_i18n/en/_posts/2022-01-25-民主峰會行動-性別統計開放資料.md
@@ -1,21 +1,26 @@
 ---
   layout: "post"
-  title: "Democracy Summit Action: Open Data on Gender Statistics"
-  excerpt: "How to ensure commitment and continue to deepen the implementation? The existence of the Significant Gender Statistics Database is crucial."
+  title: "Spurring Summit for Democracy Progress"
+  excerpt: "How should such a commitment be safeguarded and deepened going forward? The existence of the Significant Gender Statistics Database is crucial. "
   image: "/assets/imgs/abstract-gf3ded81fa_1280.jpg"
-  author: "唐鳳、彭筱婷"
+  author: "Audrey Tang, Sheau-Tyng Peng"
   category: "blog"
   tags: 
-    - "開放政府"
+    - "Open Government"
 ---
 
+The Summit for Democracy was an invaluable platform for sharing Taiwan's democratic achievements, as well as discussing the major themes of defending against authoritarianism, addressing and fighting corruption, and advancing human rights. Maintaining the momentum of last December's successful event demands an all hands on deck approach. This is why, with the concerted efforts of cross-sector partners, Taiwan has made 62 post-summit domestic and international commitments.
 
-In the first "Democracy Summit" in December 2021, we will not only share the achievements of democracy, but also discuss three major themes of "fighting authoritarianism, combating corruption, and promoting human rights" with our partners. Building on this list of 62 specific domestic and international commitments, made by our interagency partners, Taiwan will work with like-minded countries to continue investing in strengthening democracy and optimizing human rights. One of the specific commitments is to "disclose the gender ratio of decision-makers," including ministries and commissions affiliated to the Executive Yuan, state-run enterprises, and government-sponsored foundations. 
+Based on this list, Taiwan will cooperate with like-minded partners to continue the work of strengthening democracy and optimizing human rights. One of the specific commitments is to disclose the gender ratio of decision-makers within ministries and councils under the Executive Yuan, state-run enterprises and government-sponsored foundations.
 
-In 2007, the Chinese government signed the "Convention on the Elimination of All Forms of Discrimination against Women". Article 7 of the Convention particularly emphasizes "guaranteeing the participation of different genders in the formulation and implementation of government policies, holding public office, and performing public duties"; for many years, the Executive Yuan has made gender equality The conference has accumulated fruitful results on gender mainstreaming, how to ensure the commitment and continue to deepen the implementation? The existence of the Significant Gender Statistics Database is crucial. This database is compiled by the Sex Ping Association, which selects important items from the gender statistics items established by various government agencies. Since 2015, more than 500 items of gender statistics from various agencies have been collected, providing all walks of life with the long-term trend of gender equality development. 
+In 2007, our government signed the UN Convention on the Elimination of All Forms of Discrimination against Women. Article 7 of the convention seeks to "guarantee that different genders participate in the formulation and implementation of government policies, hold public office and perform public duties."
 
-After the discussion at the Democracy Summit, we decided to formally link the “[Key Gender Statistics Database](https://www.gender.ey.gov.tw/gecdb/)” to the “[government data open platform] ](https://data.gov.tw/)”. Making data structured and open for global use is an important foundation for promoting gender-inclusive dialogue and participation, and it is another commitment we made at the summit; the implementation of Taiwan's first National Action Plan for Open Government. Therefore, the Executive Yuan's Sexual Affairs Division, the National Development and Reform Commission, and my office set out to plan the technical details of interfacing the database with the open platform. 
+The Gender Equality Committee of the Executive Yuan has made real headway on gender mainstreaming over the years. How should such a commitment be safeguarded and deepened going forward? The existence of the Significant Gender Statistics Database is crucial. This tool, created by the Gender Equality Council, identifies key items from the gender statistics established by various government agencies. Since 2015, more than 500 items from various agencies have been included, providing all sectors of society with the long-term trend of gender equality development.
 
- Since the important gender statistics come from different agencies, if they are sorted and uploaded to the platform separately, it will not only increase the cost of communication between agencies, but also may cause the risk of data omission and difficulty in classification. Therefore, from March this year, we decided to import the data of all ministries into the platform in batches on a daily basis through the shared keyword "#genderstatistics". Quick confirmation when tidying up. These practices can not only ensure the complete import of data, but also allow relevant units to be more flexible in subsequent data processing, such as adding multiple keywords to a single data set to make data search more accurate. 
+Following the summit, it was decided to formally link the [Significant Gender Statistics Database](https://www.gender.ey.gov.tw/gecdb/) to the [Government Open Data Platform](https://data.gov.tw/en). Making data structured and open for global use is an important foundation for promoting dialogue and participation on gender inclusion, and it also realizes another commitment we made at the summit: the implementation of our first National Action Plan for Open Government. Responsibility for planning the technical details of interfacing the database with the open platform falls to Executive Yuan's Gender Equality Committee, National Development Council and, of course, my office.
 
- The "Key Gender Statistics Database" represents the government's views on gender policy. When these data are combined with global open data to explore, analyze, and cross-comparison, the significance of gender factors in policy can be more clearly seen, and the spirit of "evidence-based governance" can be injected into the daily life of public affairs, and gender impact assessment will not be the same. It's empty talk. This is not only our policy guideline, but also an important cornerstone for the advancement of digital democracy and human rights. 
+Since the Significant Gender Statistics come from different agencies, the best and most cost-effective compilation strategy is importing the database directly into the open data platform in daily batches, with #GenderStat as the common keyword.
+
+At the same time, each data set is marked with the contact interface of the agency to facilitate quick confirmation when the information is collated. These practices ensure the complete import of data and provide relevant agencies with more flexibility in subsequent data processing, such as adding multiple keywords to a single data set to make data search more accurate.
+
+The Significant Gender Statistics Database represents the government's viewpoints on gender policy. When this data is brought together with global open data for ex
