--- a/_i18n/en/_posts/2022-01-25-民主峰會行動-性別統計開放資料.md
+++ b/_i18n/en/_posts/2022-01-25-民主峰會行動-性別統計開放資料.md
@@ -23,4 +23,4 @@ Since the Significant Gender Statistics come from different agencies, the best a
 
 At the same time, each data set is marked with the contact interface of the agency to facilitate quick confirmation when the information is collated. These practices ensure the complete import of data and provide relevant agencies with more flexibility in subsequent data processing, such as adding multiple keywords to a single data set to make data search more accurate.
 
-The Significant Gender Statistics Database represents the government's viewpoints on gender policy. When this data is brought together with global open data for ex
+The Significant Gender Statistics Database represents the government's viewpoints on gender policy. When this data is brought together with global open data for exploration, analysis and cross-comparison, the significance of gender factors in policies can be more clearly seen. It also allows for the spirit of evidence-based governance to be injected into public affairs and guarantee that gender impact assessment will no longer be abstract. This encapsulates Taiwan's policy guideline, and is a cornerstone in the ongoing process of advancing digital democracy and human rights.
