* link back to mofa

--- a/_i18n/en/_posts/2022-01-26-民主峰會行動-性別統計開放資料.md
+++ b/_i18n/en/_posts/2022-01-26-民主峰會行動-性別統計開放資料.md
@@ -9,7 +9,7 @@
     - "Open Government"
 ---
 
-The Summit for Democracy was an invaluable platform for sharing Taiwan's democratic achievements, as well as discussing the major themes of defending against authoritarianism, addressing and fighting corruption, and advancing human rights. Maintaining the momentum of last December's successful event demands an all hands on deck approach. This is why, with the concerted efforts of cross-sector partners, Taiwan has made 62 post-summit domestic and international commitments.
+The Summit for Democracy was an invaluable platform for sharing Taiwan's democratic achievements, as well as discussing the major themes of defending against authoritarianism, addressing and fighting corruption, and advancing human rights. Maintaining the momentum of last December's successful event demands an all hands on deck approach. This is why, with the concerted efforts of cross-sector partners, Taiwan has made [62 post-summit domestic and international commitments](https://en.mofa.gov.tw/News_Content.aspx?n=1328&sms=273&s=97165).
 
 Based on this list, Taiwan will cooperate with like-minded partners to continue the work of strengthening democracy and optimizing human rights. One of the specific commitments is to disclose the gender ratio of decision-makers within ministries and councils under the Executive Yuan, state-run enterprises and government-sponsored foundations.
 
