--- a/_posts/2022-01-26-民主峰會行動-性別統計開放資料.md
+++ b/_posts/2022-01-26-民主峰會行動-性別統計開放資料.md
@@ -9,7 +9,7 @@ tags:
   - 開放政府
 ---
 
-在 2021 年 12 月首屆「民主峰會」中，我們除了分享民主成果，也和與會的夥伴共同討論「對抗威權主義、打擊貪腐、促進人權」等三大主題。在跨部門夥伴的同心協力下，我們提出 62 項國內外具體承諾，以這份清單為基礎，臺灣將與理念相近的國家合作，持續投入鞏固民主和優化人權工作。其中一項具體承諾，就是「公開決策階層人員的性別比例」，包括行政院所屬各部會、國營事業、政府捐助的財團法人在內。
+在 2021 年 12 月首屆「民主峰會」中，我們除了分享民主成果，也和與會的夥伴共同討論「對抗威權主義、打擊貪腐、促進人權」等三大主題。在跨部門夥伴的同心協力下，我們提出 [62 項國內外具體承諾](https://www.mofa.gov.tw/News_Content.aspx?n=95&s=97117)，以這份清單為基礎，臺灣將與理念相近的國家合作，持續投入鞏固民主和優化人權工作。其中一項具體承諾，就是「公開決策階層人員的性別比例」，包括行政院所屬各部會、國營事業、政府捐助的財團法人在內。
 
 2007 年，我國政府簽署「消除對婦女一切形式歧視公約」，公約第 7 條特別強調「保障不同性別參與政府政策制定執行、擔任公職、執行公務」；多年來，行政院性別平等會就性別主流化累積了豐碩成果，如何確保承諾並且持續深化推展？「重要性別統計資料庫」的存在至為關鍵。這份資料庫是由性平會從政府各機關建置的性別統計項目裡，揀選出重要的項目彙整而成。2015 年以來，已收錄超過 500 項各機關性別統計資料，提供各界掌握性別平等發展的長期趨勢。
 
