--- a/_posts/2022-01-26-民主峰會行動-性別統計開放資料.md
+++ b/_posts/2022-01-26-民主峰會行動-性別統計開放資料.md
@@ -13,7 +13,7 @@ tags:
 
 2007 年，我國政府簽署「消除對婦女一切形式歧視公約」，公約第 7 條特別強調「保障不同性別參與政府政策制定執行、擔任公職、執行公務」；多年來，行政院性別平等會就性別主流化累積了豐碩成果，如何確保承諾並且持續深化推展？「重要性別統計資料庫」的存在至為關鍵。這份資料庫是由性平會從政府各機關建置的性別統計項目裡，揀選出重要的項目彙整而成。2015 年以來，已收錄超過 500 項各機關性別統計資料，提供各界掌握性別平等發展的長期趨勢。
 
-在民主峰會的討論後，我們決定將「[重要性別統計資料庫](https://www.gender.ey.gov.tw/gecdb/)」正式介接「[政府資料開放平臺](https://data.gov.tw/)」。將資料結構化後開放供全球運用，是促進性別包容對話與參與的重要基礎，也是落實我們在峰會的另一項承諾﹔實施臺灣首部「開放政府國家行動方案」。因此，行政院性平處、國發會和我的辦公室，著手規劃將資料庫和開放平臺介接的技術細節。
+在民主峰會的討論後，我們決定將「[重要性別統計資料庫](https://www.gender.ey.gov.tw/gecdb/)」正式介接「[政府資料開放平臺](https://data.gov.tw/)」。將資料結構化後開放供全球運用，是促進性別包容對話與參與的重要基礎，也是落實我們在峰會的另一項承諾：實施臺灣首部「開放政府國家行動方案」。因此，行政院性平處、國發會和我的辦公室，著手規劃將資料庫和開放平臺介接的技術細節。
 
 由於重要性別統計資料分別來自不同機關，如再由各機關整理後分別上傳平臺，不但增加機關間溝通成本，也可能造成資料缺漏和分類困難的風險。因此，我們決定從今年 3 月起，將各部會資料透過共用的「#性別統計」關鍵字，每日分批直接匯入平臺；於此同時，每份資料都註記機關聯絡窗口，以利資料整理時快速確認。這些做法不僅可以確保資料完整匯入，也讓相關單位在後續處理資料時更有彈性，例如為單筆資料集加註多筆關鍵字，使資料搜尋更為精準。
 
