--- a/_i18n/en/_posts/2022-02-10-我的臉與它們的產地.md
+++ b/_i18n/en/_posts/2022-02-10-我的臉與它們的產地.md
@@ -1,12 +1,12 @@
 ---
   layout: "post"
-  title: "my face and where they come from"
+  title: "My face and where they come from"
   excerpt: "Generate antibodies to false images and reduce the chance of being manipulated."
   image: "/assets/imgs/deepfake.jpg"
-  author: "唐鳳、簡孝樺"
+  author: "Audrey Tang, Joke"
   category: "blog"
   tags: 
-    - "社會創新"
+    - "Social Innovation"
 ---
 
 
