--- a/_posts/2022-02-10-我的臉與它們的產地.md
+++ b/_posts/2022-02-10-我的臉與它們的產地.md
@@ -3,7 +3,7 @@ layout: post
 title: 我的臉與它們的產地
 excerpt: 對不實影像產生抗體，減少被操弄的機會。
 image: /assets/imgs/deepfake.jpg
-author: 唐鳳、簡孝樺
+author: 唐鳳、簡就可
 category: blog
 tags:
   - 社會創新
