--- a/_i18n/en/_posts/2022-02-02-聆聽對立面-「涵容」會議之外.md
+++ b/_i18n/en/_posts/2022-02-02-聆聽對立面-「涵容」會議之外.md
@@ -1,22 +1,22 @@
 ---
   layout: "post"
-  title: "Listening to the opposite - beyond the \"containment\" meeting"
+  title: "Listening to the opposite - beyond \"inclusive\" meetings"
   excerpt: "How to make diverse voices softly understood will be the core of future collaborative meetings."
   image: "/assets/imgs/20220202.jpg"
-  author: "唐鳳、詹壹雯"
+  author: "Audrey Tang, Yi-Wen Chan"
   category: "blog"
   tags: 
-    - "開放政府"
+    - "Open Government"
 ---
 
 
- &quot;Have you ever thought about it: you are sitting at the round table, the Bunun people are going to stand and talk, but today I want to learn from you to sit and talk? I am not compromising when I sit, but I want to share everything with you. Speak well.”
+&quot;Have you ever thought about it: You are sitting at the round table here. We the Bunun people stand when we talk, but today I come here to sit and talk like you do? I am not compromising when I sit down, but I do want to share with everyone. Speak well.”
 
-This is the [Open Government Proposition 98 Collaborative Meeting](https://cm.pdis.nat.gov.tw/98/), a representative office of a tribe living around Yushan National Park the words said. The Bunun people remind us: Inclusion, in addition to accommodating differences in stance, should be handled delicately, the expressions that are familiar and comfortable to different groups. 
+These words were spoken the [Open Government 98th Collaborative Meeting](https://cm.pdis.nat.gov.tw/98/), from a representative of a tribe living around Yushan National Park. The Bunun people remind us: Inclusion, in addition to accommodating differences in stance, should be handled delicately, the expressions that are familiar and comfortable to different groups. 
 
 The difference between the traditional hunting culture of aboriginal peoples and the current regulations, from the May 2021 Justice of the Judiciary&#39;s Interpretation No. 803 (Wang Guanglu&#39;s Constitutional Interpretation Case), and the public opinion caused by the Legislative Yuan when the relevant bills were commissioned , you can know one or two. This issue involves the Original Base Law, the Wildlife Conservation Law, and the [Draft Amendment to the National Parks Law](https://join.gov.tw/policies/detail/ 40201645-02df-4807-a63b-6144fc9bd15d). Stakeholders such as animal conservation groups, original rights groups, ecologists, and administrative agencies have met and expressed their positions at various forums on the revision of the law. 
 
- What the Open Government Collaboration Conference can contribute is to further ask: who should participate but not yet be invited? Forms that have the opportunity to promote understanding, and what are the possibilities? 
+What the Open Government Collaboration Conference can contribute is to further ask: who should participate but not yet be invited? Forms that have the opportunity to promote understanding, and what are the possibilities? 
 
 Although there were more than 100 comments on the Join platform, the actual number of people who signed up for the collaboration was not large. Therefore, the Construction Department immediately invited volunteers who were passionate about national parks to participate. The grass-roots colleagues in the management and divisions who will definitely be affected by the draft are also listed as soon as possible, and they are invited to use the collaborative meeting platform to align their understanding with higher-level units and participants from all walks of life and express their ideas. 
 
@@ -24,10 +24,10 @@ Although there were more than 100 comments on the Join platform, the actual numb
 
 At the meeting, although participants with different positions We have already understood each other&#39;s arguments, but we have changed the traditional one-way communication method of &quot;pressing the competent authorities&quot; and made full use of the form of group discussion, so that everyone can start &quot;listening to each other&quot; through multi-dimensional communication through &quot;chat and conversation&quot;. Even if a single collaborative meeting doesn&#39;t get to the point of empathy and cooperation, &quot;listening to the opposite&quot; is at least a good start. 
 
-In the past collaboration meetings, we have continued to adjust and reflect: how to promote the spirit of &quot;accommodation&quot;, towards &quot;not compromise, but to tell everyone about everything well&quot;? For example, in the venue arrangement, consider the transportation costs of different participants and try to achieve a balance; adjust the way of writing meeting materials to improve readability; and &quot;anonymous online messages&quot; in the meeting and can enhance the &quot;chat with the house&quot;. The panel discussion session is of course standard equipment. 
+In the past collaboration meetings, we have continued to adjust and reflect: how to promote the spirit of &quot;accommodation&quot;, towards &quot;not compromise, but to share with everyone and to speak well&quot;? For example, in the venue arrangement, consider the transportation costs of different participants and try to achieve a balance; adjust the way of writing meeting materials to improve readability; and &quot;anonymous online messages&quot; in the meeting and can enhance the &quot;chat with the house&quot;. The panel discussion session is of course standard equipment. 
 
  <iframe width="560" height="315" src="https://www.youtube.com/embed/8DvOj9YKvZY" frameborder="0" allowfullscreen></iframe> 
 
- But it cannot be denied that the way of discussing in the conference room through microphones and sitting in an orderly manner still touches the speech habits of some people to some extent. Or, &quot;speaking&quot; itself is a self-expression method that conforms to the mainstream &quot;discourse&quot; type. And when the form of discussion is inevitably limited, &quot;containment&quot; has a new task: to explore those indescribable experiences and inadvertently left out viewpoints. 
+ But it cannot be denied that the way of discussing in the conference room through microphones and sitting in an orderly manner still touches the speech habits of some people to some extent. Or, &quot;speaking&quot; itself is a self-expression method that conforms to the mainstream &quot;discourse&quot; type. And when the form of discussion is inevitably limited, &quot;inclusiveness&quot; has a new task: to explore those indescribable experiences and inadvertently left out viewpoints. 
 
 For me, open government is a process of mutual learning. Because of open sharing, we can read our own limitations from the abundance of others; only by admitting our own limitations can we open up space for complementary cooperation. At the beginning of 2022, how to make diverse voices softly understood will be the core question in the next few collaborative meetings. You are welcome to continue to pay attention and join in the contribution. 
