--- a/_i18n/en/_posts/2022-03-10-全民許願-讓黑客為你實現夢想.md
+++ b/_i18n/en/_posts/2022-03-10-全民許願-讓黑客為你實現夢想.md
@@ -1,22 +1,22 @@
 ---
   layout: "post"
   title: "All people make a wish, let hackers realize their dreams for you"
-  excerpt: "Select outstanding aspirations and expand your ideas through the \"Idea Pine\"."
-  image: "/assets/imgs/ph2022.jpg"
-  author: "唐鳳、彭美琪"
+  excerpt: "Select outstanding aspirations and expand your ideas through the \"Ideathon\"."
+  image: "/assets/imgs/ph2022.jpeg"
+  author: "Audrey Tang, Mickey Peng"
   category: "blog"
   tags: 
-    - "社會創新"
+    - "Social Innovation"
 ---
 
 
- Have you ever thrown a coin into the water with a thud, hoping your wish would come true? Want to monitor power supply and demand in Taiwan and monitor air quality in real time? Just write in the Presidents Cup Hackathon Wishing Pool and you have a chance to make it happen. 
+Have you ever thrown a coin into the water with a thud, hoping your wish would come true? Want to monitor power supply and demand in Taiwan and monitor air quality in real time? Just write in the Presidential Hackathon Wishing Pool and you have a chance to make it happen. 
 
-Presidents Cup Hackathon has entered its fifth year. The "Citizens' Wishing Pool" starts every year, and drives a series of activities such as idea pine, problem solving, public square voting, workshops, final judging, and the most exciting Presidential Awards Ceremony. 
+Presidential Hackathon has entered its fifth year. The "Citizens' Wishing Pool" starts every year, and drives a series of activities such as Ideathon, problem solving, public square voting, workshops, final judging, and the most exciting Presidential Awards Ceremony. 
 
-The Wishing Pool has been designed since the beginning of the Presidents Cup Hackathon. It is hoped that many people who see problems and want to solve them, but have no programming or data processing skills, can also contribute ideas and come up with ideas. The number of wishes over the years has grown rapidly like a snowball, from 29 in 2019, 132 in the following year, to 153 in 2021, bringing out the optimization of public services and the proactive innovation of public servants. 
+The Wishing Pool has been designed since the beginning of the Presidential Hackathon. It is hoped that many people who see problems and want to solve them, but have no programming or data processing skills, can also contribute ideas and come up with ideas. The number of wishes over the years has grown rapidly like a snowball, from 29 in 2019, 132 in the following year, to 153 in 2021, bringing out the optimization of public services and the proactive innovation of public servants. 
 
-The theme of the 2022 Presidents Cup Hackathon is "Sustainable Living, Balance Taiwan". In order to encourage everyone to make a wish, the "Outstanding Wishing Award" was specially designed this time. Experts, scholars and non-governmental opinion leaders focus on the wishes of the wishing pool, select outstanding wishes, and expand their ideas through the "ideas pine". 
+The theme of the 2022 Presidential Hackathon is "Sustainable Living, Balance Taiwan". In order to encourage everyone to make a wish, the "Outstanding Wishing Award" was specially designed this time. Experts, scholars and non-governmental opinion leaders focus on the wishes of the wishing pool, select outstanding wishes, and expand their ideas through the "Ideathon". 
 
 In addition, in previous years, the Wishing Pool was an online collaboration platform, HackMD, which was edited in markdown syntax. You need to be familiar with the basic syntax when making a wish, and some people or civil servants may need additional learning. In order to make the wishing threshold more barrier-free and the wishing interface more intuitive, the wishing pool rebuilt this year is from a more people-friendly perspective. 
 
@@ -24,4 +24,4 @@ This year also held 6 physical wishing briefing sessions for the first time, cov
 
 For the 164 hacking proposals last year, about half of them were in response to the Citizens Wishing Pool. For example, "LASS Open Source Public Welfare Environmental Sensing Network", which won the Outstanding Team Award, responded to the expectation of "hold the water, don't worry about not being able to cook instant noodles"; "Shi Muyu" responded "Reuse waste heat, save the earth"; "Haiyong Studio" responded to the desire of "beach protection". 
 
-Whether you are concerned about whether you can drink good water in your place of residence, hope to improve the environment and environmental assessment of marine aquaculture, or maintain beautiful beaches, etc., more citizens are welcome to make a wish. As long as you make a wish, hackers will solve the problem for you, and the government will implement it for you. The Presidents Cup Hackathon Wishing Pool will run from March 16th until March 31st. Put your wishes into the [Wishing Pool website](https://presidential-hackathon.taiwan.gov.tw), and let's make a wish together to make your dream come true. 
+Whether you are concerned about whether you can drink good water in your place of residence, hope to improve the environment and environmental assessment of marine aquaculture, or maintain beautiful beaches, etc., more citizens are welcome to make a wish. As long as you make a wish, hackers will solve the problem for you, and the government will implement it for you. The Presidential Hackathon Wishing Pool will run from March 16th until March 31st. Put your wishes into the [Wishing Pool website](https://presidential-hackathon.taiwan.gov.tw), and let's make a wish together to make your dream come true. 
