--- a/_i18n/zh-TW/_posts/2022-03-10-全民許願-讓黑客為你實現夢想.md
+++ b/_i18n/zh-TW/_posts/2022-03-10-全民許願-讓黑客為你實現夢想.md
@@ -2,7 +2,7 @@
 layout: post
 title: 全民許願，讓黑客為你實現夢想
 excerpt: 選出傑出願望，透過「點子松」擴大發想的創意。
-image: /assets/imgs/ph2022.jpg
+image: /assets/imgs/ph2022.jpeg
 author: 唐鳳、彭美琪
 category: blog
 tags:
