--- a/_i18n/en/_posts/2022-03-02-共創涵融的「多元宇宙」.md
+++ b/_i18n/en/_posts/2022-03-02-共創涵融的「多元宇宙」.md
@@ -1,34 +1,42 @@
 ---
   layout: "post"
-  title: "Co-creating an inclusive \"multiverse\""
-  excerpt: "Everyone remains autonomous and connected to each other, fully experiencing the feeling of being there together, and then creating a \"land that no one has ever reached\"."
-  image: null
-  author: "唐鳳、張皓婷、彭筱婷"
+  title: "Co-creating an inclusive Plurality"
+  excerpt: "Everyone can freely connect with each other, fully experience the feeling of being there together, and go boldly where no one has gone before."
+  image: /assets/imgs/leaves-gf226192d1_1280.jpg
+  author: "Audrey Tang, Hao-Ting Chang, Sheau-Tyng Peng"
   category: "blog"
   tags: 
-    - "開放政府"
-    - "社會創新"
+    - "Open Government"
+    - "Social Innovation"
 ---
 
 
- Recently, the Metaverse has become a hot topic. The currently known concept is that in a virtual world, anyone has the opportunity to appear as their own avatar. 
- In other words, many interactions that take place in real society can be done in it. Although it has not been realized yet, this concept has been widely concerned and discussed, and some people have asked me directly, is this really the future of mankind? 
+Recently, the Metaverse has become a hot topic. The currently known concept is that in a virtual world, anyone has the opportunity to appear as their own avatar. 
 
- My answer is: Just as the "Internet" is composed of multiple network topologies, the "plurality" developed by the Taiwan model may be a more imaginative alternative. 
+In other words, many interactions that take place in real society can be done in it. Although it has not been realized yet, this concept has been widely concerned and discussed, and some people have asked me directly, is this really the future of mankind? 
 
- What is a multiverse? In my opinion, it is an extension of a pluralistic society: everyone can set their own space, initiate what they want to do, transcend the constraints of venue and time, and jointly create a mode of interaction that suits each other. 
+My answer is: Just as the "Internet" is composed of multiple network topologies, the "Plurality" developed by the Taiwan model may be a more imaginative alternative. 
 
- The core value of the multiverse is the freedom of "co-creation". Emerging technological tools that enable Web 3 are often the focus of debates about the new world. 
- However, I think the most important thing is to start from "people". Through appropriate technology and tools, we can communicate with each other smoothly, build consensus, and identify problems, so as to create a scene that meets our needs. 
- For example, the sli.do platform that I often use when speaking, allows anyone to express their opinions or questions no matter where they are. 
- If you agree with someone else's speech, you can like it. The more likes you have, the more you can know each other's thoughts, and let everyone's wisdom inspire more diverse thinking and connections. 
+What is Plurality? In my opinion, it is an extension of a pluralistic society: everyone can set their own space, initiate what they want to do, transcend the constraints of venue and time, and jointly create a mode of interaction that suits each other. 
 
-Taiwan model, let the whole world see the results that "co-creation" can achieve. In the past two years, we have been successful in epidemic prevention, including the "Mask Supply and Demand Platform" and the "1922 SMS Real Link System", which have designed a unique global epidemic prevention mechanism through cross-departmental cooperation; 
-The president who is about to enter his fifth year The Cup Hackathon is attended by thousands of social entrepreneurs, grass-roots civil servants, and teams from all over the world every time. 
- From the government, the private sector to the civil society, the partnership formed by countless "microcosms" through online and offline agitation is a model of the multiverse. 
+The core value of Plurality is the freedom of "co-creation". Emerging technological tools that enable Web 3 are often the focus of debates about the new world. 
 
- Will the multiverse replace real life? Another core ethos of the multiverse, I think, is "containment." 
+However, I think the most important thing is to start from people. Through appropriate technology and tools, we can communicate with each other smoothly, build consensus, and identify problems, so as to create a scene that meets our needs. 
+
+For example, the sli.do platform that I often use when speaking, allows anyone to express their opinions or questions no matter where they are. 
+
+If you agree with someone else's speech, you can like it. The more likes you have, the more you can know each other's thoughts, and let everyone's wisdom inspire more diverse thinking and connections. 
+
+Taiwan model, let the whole world see the results that "co-creation" can achieve. In the past two years, we have been successful in epidemic prevention, including the "Mask Supply and Demand Platform" and the "1922 SMS" contact tracing system, which have designed a unique global epidemic prevention mechanism through cross-departmental cooperation.
+
+The Presidential Hakactho, now in the fifth year, is attended by thousands of social entrepreneurs, grass-roots civil servants, and teams from all over the world every time. 
+
+From the government, the private sector to the civil society, the partnership formed by countless "microcosms" through online and offline mechanisms, is a model of the Plurality. 
+
+Will the Plurality replace real life? Another core ethos of pluralism, I think, is "inclusion." 
+
 Like the fact that even though the text messaging system has become the mainstream, we still hope that the store will keep the paper options, so that people in need can choose independently, and they will not harm each other and continue to coexist. 
- Everyone maintains autonomy and can connect with each other, fully experience the feeling of being there together, and then create a "land that has not been reached before". 
 
-From now on, we will continue to introduce appropriate digital tools and open minds through infrastructure construction and innovation mechanisms, so that the multiverse that connects the same vision of "co-creation" and "integrates" different opinions will continue to develop to the whole world. world. 
+Everyone can freely connect with each other, fully experience the feeling of being there together, and go boldly where no one has gone before.
+
+From now on, we will continue to introduce appropriate digital tools and open minds through infrastructure construction and innovation mechanisms, so that the Plurality that connects the same vision of "co-creation" and "inclusion" different opinions will continue to develop to the whole world.
